src/objects/RequirementRule__c.object
<CustomObject>
    <description>This is a rule table for all objects that add requirements through an automated proces.</description>
    <fields>
        <fullName>AllNeedReq__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not all the student need the requirement, regardless of criteria</description>
        <inlineHelpText>Whether or not all the student need the requirement, regardless of criteria</inlineHelpText>
        <label>All Need Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinRequirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Financial Requirement Value</description>
        <inlineHelpText>The Financial Requirement Value</inlineHelpText>
        <label>Fin Requirement</label>
        <referenceTo>KeyValue__c</referenceTo>
        <relationshipLabel>RequirementRules</relationshipLabel>
        <relationshipName>RequirementRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImportFieldBlankValue__c</fullName>
        <description>What value represents a Blank Record. Default is null, but can be something like &apos;none of above&apos;</description>
        <inlineHelpText>What value represents a Blank Record. Default is null, but can be something like &apos;none of above&apos;</inlineHelpText>
        <label>Import Field Blank Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportFieldNumber__c</fullName>
        <description>What field in the import file establishes this requirement</description>
        <inlineHelpText>What field in the import file establishes this requirement</inlineHelpText>
        <label>Import Field Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportFieldSatisfy__c</fullName>
        <description>What field if populated on the import will satisfy the requirement</description>
        <inlineHelpText>What field if populated on the import will satisfy the requirement</inlineHelpText>
        <label>Import Field Satisfy</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Requirement Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AllNeedReq__c</columns>
        <columns>FinRequirement__c</columns>
        <columns>ImportFieldBlankValue__c</columns>
        <columns>ImportFieldNumber__c</columns>
        <columns>ImportFieldSatisfy__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Requirement Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RequirementRules</pluralLabel>
    <recordTypes>
        <fullName>ScholarshipImport</fullName>
        <active>true</active>
        <description>Rules on what requirements to add from the import</description>
        <label>Scholarship Import</label>
    </recordTypes>
    <recordTypes>
        <fullName>ThirdParty</fullName>
        <active>true</active>
        <description>Third Party Requirement Rule</description>
        <label>Third Party</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>